--- a/GUCeleb/GUCeleb/Main.storyboard
+++ b/GUCeleb/GUCeleb/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -253,6 +253,88 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D61-PO-ayl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1114" y="350"/>
+        </scene>
+        <!--Ratting-->
+        <scene sceneID="rTB-cf-E92">
+            <objects>
+                <viewController storyboardIdentifier="RattingsTabsVC" title="Ratting" id="xo1-6s-1GU" customClass="RattingsTabsVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tps-Cf-IuU"/>
+                        <viewControllerLayoutGuide type="bottom" id="aZa-Rj-zJE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pbB-Ub-fgf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="70" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="i6u-a2-qGG">
+                                <rect key="frame" x="-4" y="41" width="328" height="463"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="70" id="aVr-h3-9y3" customClass="RattingCellVC">
+                                        <rect key="frame" x="0.0" y="49.5" width="328" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aVr-h3-9y3" id="Mxu-xi-84Z">
+                                            <rect key="frame" x="0.0" y="0.0" width="328" height="69.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VPW-q3-n96">
+                                                    <rect key="frame" x="13" y="24" width="180" height="21"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="15"/>
+                                                    <color key="textColor" red="0.54901960780000003" green="0.098039215690000001" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xqd-D3-FZ7">
+                                                    <rect key="frame" x="211" y="20" width="87" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="title" destination="VPW-q3-n96" id="MSb-W8-XKk"/>
+                                            <outlet property="txtScore" destination="Xqd-D3-FZ7" id="qgU-eD-AaR"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="xo1-6s-1GU" id="4Fo-H9-Don"/>
+                                    <outlet property="delegate" destination="xo1-6s-1GU" id="HgS-I8-okg"/>
+                                </connections>
+                            </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Y1j-Dp-Xi3">
+                                <rect key="frame" x="76" y="5" width="169" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="1ol-XN-cGJ"/>
+                                    <constraint firstAttribute="width" constant="169" id="Olo-eb-TCk"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Platform"/>
+                                    <segment title="Poster"/>
+                                </segments>
+                                <color key="tintColor" red="0.54901960780000003" green="0.098039215690000001" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="changeView:" destination="xo1-6s-1GU" eventType="valueChanged" id="jBI-ik-Avl"/>
+                                </connections>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Y1j-Dp-Xi3" firstAttribute="top" secondItem="tps-Cf-IuU" secondAttribute="bottom" constant="5" id="6I1-lh-oqs"/>
+                            <constraint firstItem="Y1j-Dp-Xi3" firstAttribute="centerX" secondItem="pbB-Ub-fgf" secondAttribute="centerX" id="9Up-0O-B1j"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="i6u-a2-qGG" secondAttribute="trailing" constant="-20" id="Jdn-Vu-BcV"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="i6u-a2-qGG" secondAttribute="bottom" id="S5x-J8-hff"/>
+                            <constraint firstItem="i6u-a2-qGG" firstAttribute="leading" secondItem="pbB-Ub-fgf" secondAttribute="leadingMargin" constant="-20" id="VXM-fK-8h8"/>
+                            <constraint firstItem="i6u-a2-qGG" firstAttribute="top" secondItem="Y1j-Dp-Xi3" secondAttribute="bottom" constant="8" id="ZsV-hR-TGV"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="tableView" destination="i6u-a2-qGG" id="sSR-a4-DsB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nMU-ja-n0U" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="194" y="1695"/>
         </scene>
     </scenes>
     <resources>
